--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,38 +34,38 @@
      <% end %>
 
      <label>ETHNICITY/IES:</label>
-     <br>
+     <%= f.text_area :ethnicities_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
+     <label><em>OR CHOOSE AN OPTION FROM BELOW </em></label><br>
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Ethnicity.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= f.check_box :ethnicities_text_area %>
+         <input type="checkbox" name="ethnicities_text_area" value="<%= v.fetch(0).value %>">
          <%=  v.fetch(0).value %>
        </p>
      <% end %>
 
-     <%= f.text_area :ethnicities_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
 
      <label>GENDER/S:</label>
-     <br>
+     <%= f.text_area :genders_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
+     <label><em>OR CHOOSE AN OPTION FROM BELOW </em></label><br>
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Gender.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= f.check_box :genders_text_area %>
+         <input type="checkbox" name="genders_text_area" value="<%= v.fetch(0).value %>">
          <%=  v.fetch(0).value %>
        </p>
      <% end %>
-     <%= f.text_area :genders_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
 
      <label>ORIENTATION/S:</label>
-     <br>
+     <%= f.text_area :orientations_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
+     <label><em>OR CHOOSE AN OPTION FROM BELOW </em></label><br>
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Orientation.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= f.check_box :orientations_text_area %>
+         <input type="checkbox" name="orientations_text_area" value="<%= v.fetch(0).value %>">
          <%=  v.fetch(0).value %>
        </p>
      <% end %>
-     <%= f.text_area :orientations_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
 
      <%= f.submit "UPDATE USER", class: "button" %>
 
