--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,8 +39,8 @@
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Ethnicity.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= check_box_tag (:ethnicities), v.fetch(0).value %>
-         <%=  v.fetch(0).value %>
+         <%= check_box_tag :ethnicities, v.fetch(0).value %>
+         <%=  f.label v.fetch(0).value %>
        </p>
      <% end %>
 
@@ -51,8 +51,8 @@
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Gender.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= check_box_tag (:genders), v.fetch(0).value %>
-         <%=  v.fetch(0).value %>
+         <%= check_box_tag :genders, v.fetch(0).value %>
+         <%=  f.label v.fetch(0).value %>
        </p>
      <% end %>
 
@@ -62,8 +62,8 @@
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Orientation.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= check_box_tag (:orientations), v.fetch(0).value %>
-         <%=  v.fetch(0).value %>
+         <%= check_box_tag :orientations, v.fetch(0).value %>
+         <%=  f.label v.fetch(0).value %>
        </p>
      <% end %>
 
