--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -48,14 +48,17 @@
        </p>
      <% end %>
 
-
      <label>GENDER/S:</label>
      <%= f.text_area :genders_text_area, style: "font-family:georgia; width: 70%", :cols => 10, :rows => 5 %><br>
      <label><em>OR CHOOSE AN OPTION FROM BELOW </em></label><br>
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Gender.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= check_box_tag :genders, v.fetch(0).value %>
+           <% if @user.genders[0].value.include?(v.fetch(0).value) %>
+             <%= check_box_tag :genders, v.fetch(0).value, :checked %>
+           <% else %>
+             <%= check_box_tag :genders, v.fetch(0).value %>
+           <% end %>
          <%=  f.label v.fetch(0).value %>
        </p>
      <% end %>
@@ -66,7 +69,11 @@
      <!-- automatically calculate the 5 most common responses and show those as check boxes while still leaving a free form text field for people to enter their own answers -->
      <% Orientation.top_five.each do |v| %>
        <p style="font-family:georgia; width:70%">
-         <%= check_box_tag :orientations, v.fetch(0).value %>
+           <% if @user.orientations[0].value.include?(v.fetch(0).value) %>
+             <%= check_box_tag :orientations, v.fetch(0).value, :checked %>
+           <% else %>
+             <%= check_box_tag :orientations, v.fetch(0).value %>
+           <% end %>
          <%=  f.label v.fetch(0).value %>
        </p>
      <% end %>
